# awive

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  analyze_image.py  app.py  correct_image.py  draw_gcp.py  execute.py  imageprep.py  index.html  loader.py  main.py  mean.py  mkdocs.yml  objects.inv  otv.py  pyproject.toml  readCsv.py  setup.py  sitemap.xml  sti.py  utils.py  video.py  water_level_hist.py
.github/workflows/: ci.yml
awive/: __main__.py  analyze_image.py  app.py  config.py  correct_image.py  draw_gcp.py  exceptions.py  execute.py  imageprep.py  loader.py  main.py  mean.py  otv.py  plots.py  readCsv.py  sti.py  to_video.py  video.py  water_level_hist.py
awive/algorithms/: image_velocimetry.py  otv.py
docs/: about.md  index.md
docs/features/: plots.md
examples/basic/: __main__.py
examples/otv/: __main__.py
features/plots/: index.html
src/awive/: analyze_image.py  config.py  readCsv.py
