[tool.poetry]
name = "awive"
version = "0.2.0"
description = "Joseph Pena's bachelor thesis work"
authors = ["Joseph P. <joseph.pena@utec.edu.pe>"]
license = "MIT"
readme = "README.md"
packages = [{include = "awive"}]

[tool.poetry.dependencies]
python = "~3.9.2 || ~3.11.2"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
pydantic = ">=1.10.2"
wget = "^3.2"
requests = "^2.28.1"
types-requests = "^2.28.11.5"
npyplotter = {git = "https://github.com/JosephPenaQuino/npy-plotter.git", rev = "v0.1.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
